Fixed list alignment and styles

--- a/assets/styles/statement/_redesign.scss
+++ b/assets/styles/statement/_redesign.scss
@@ -151,6 +151,30 @@
         }
       }
     }
+
+    ul,
+    ol {
+      @extend .mb-0;
+
+      li {
+        @extend .li-item, .fs-8;
+      }
+
+      li.li-item:not(:last-child) {
+        margin-bottom: 19px;
+      }
+    }
+
+    ol {
+      padding-left: 1.5rem;
+      list-style-position: outside;
+
+      li {
+        padding-left: 0.5rem;
+        position: relative;
+      }
+    }
+
     .ck-editor_demagog-box-wrapper.bg-grey {
       @extend .border-0, .bg-lightgrey;
     }
@@ -168,6 +192,11 @@
         ol li {
           font-size: $h7-font-size !important;
         }
+      }
+
+      ul li,
+      ol li {
+        font-size: $h7-font-size !important;
       }
     }
     .scroll-vertical .ck-editor_demagog-box-wrapper.float-right {
